# cove

./: CLAUDE.md  Cargo.toml  brain-os-provenance-plan.md  command-r-pr-review-plan.md  context-retriever-plan.md  cove-claude-tmux-integration-plan.md  creative-design-toolkit-plan.md  diff-viewer-plan.md  dist-workspace.toml  neovim-explorer-plan.md  plan-context-viewer.md  rebrand-clove-plan.md
.github/workflows/: auto-tag.yml  release.yml
.sageox/: .repo_019d083f-dee8-7678-93dc-c5151cfb9614  README.md  config.json
src/: cli.rs  colors.rs  events.rs  lib.rs  main.rs  naming.rs  paths.rs  tmux.rs
src/commands/: hook.rs  init.rs  kill.rs  start.rs
src/sidebar/: app.rs  context.rs  mod.rs  state.rs  ui.rs
tests/: cli_parsing.rs  event_pipeline.rs  hook_state_mapping.rs  performance.rs  regressions.rs  system.rs  tmux_parsing.rs
tests/helpers/: mod.rs
