[package]
name = "cove-cli"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Claude Code session manager — tmux-based multi-session workflow"
repository = "https://github.com/rasha-hantash/cove"
homepage = "https://github.com/rasha-hantash/cove"
readme = "README.md"
keywords = ["tmux", "claude", "cove", "terminal", "tui"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "cove"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
